# xpp

robots/xpp_hyq/: CMakeLists.txt
robots/xpp_hyq/a1_description/: a1_para_load.m
robots/xpp_hyq/a1_description/urdf/: a1.urdf
robots/xpp_hyq/a1_description/xacro/: gazebo.xacro  robot.xacro
robots/xpp_hyq/include/xpp_hyq/: A1leg_inverse_kinematics (copy).h  A1leg_inverse_kinematics.h  inverse_kinematics_a1 (copy).h  inverse_kinematics_a1.h  inverse_kinematics_a1_biped.h  inverse_kinematics_hyq4.h
robots/xpp_hyq/launch/: a1.launch  a1_1.launch  a1_biped.launch  all.launch  xpp_hyq.launch
robots/xpp_hyq/rviz/: xpp_hyq.rviz
robots/xpp_hyq/src/: A1leg_inverse_kinematics (copy).cc  A1leg_inverse_kinematics.cc  a1_ik.cpp  hyqleg_inverse_kinematics.cc  inverse_kinematics_a1.cc  inverse_kinematics_a1_biped.cc
robots/xpp_hyq/src/exe/: urdf_visualizer_a1.cc  urdf_visualizer_a1_biped.cc  urdf_visualizer_hyq4.cc
robots/xpp_hyq/urdf/: a1.urdf  a1_biped.urdf  biped.urdf  leg.urdf.xacro  monoped.urdf
xpp_states/include/xpp_states/: convert.h  joints.h
xpp_states/src/: joints.cc
xpp_vis/: CMakeLists.txt
